fixed styling on mobile

--- a/src/Components/Homescreen/Homescreen.css
+++ b/src/Components/Homescreen/Homescreen.css
@@ -67,6 +67,7 @@
     .homescreen-form {
         display: block;
         text-align: center;
+        padding: 1rem 0;
     }
 
     .homescreen-labels {
